Fixed bug preventing selection of dates spanning across two different months

--- a/templates/create-event.html
+++ b/templates/create-event.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <form method="POST" action="{{ url_for('create_event') }}">
+  <form method="POST" action="/insert-event">
     <label for="nome_evento">Nome:</label>
     <input type="text" id="nome_evento" name="nome" required><br>
 
