--- a/static/calendar_style.css
+++ b/static/calendar_style.css
@@ -111,8 +111,8 @@ header .current-date{
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
+  width: 10px;
+  height: 3px;
+  border-radius: 25px;
   background-color: #9B59B6;
 }
