Changes by Xzeni

--- a/templates/create-event.html
+++ b/templates/create-event.html
@@ -14,7 +14,7 @@
 <body>
   <form method="POST" action="/insert-event">
     <label for="nome_evento">Nome:</label>
-    <input type="text" id="nome_evento" name="nome" required><br>
+    <input type="text" id="nome_evento" name="nome_evento" required><br>
 
     <label for="categoria">Categoria:</label>
     <input type="text" id="categoria" name="categoria" required><br>
