--- a/templates/fragments/footer.html
+++ b/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="bg-dark text-white py-2">
+  <div class="text-white py-2">
     <div class="container text-center">
       <span class="text-muted">&copy; 2023 Il tuo sito. Tutti i diritti riservati.</span>
     </div>
