--- a/static/style.css
+++ b/static/style.css
@@ -1,42 +1,86 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  background-color: #f8f9fa;
-  color: #333;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
+
+*{
+    font-family: 'Poppins', sans-serif;
 }
-footer {
-  bottom: 0;
-  width: 100%;
-  background-color: #f8f9fa;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #f8f9fa;
+    color: #333;
+}
+h1{
+    padding-top: 13vh;
 }
 .card {
-  width: 50%;
-  border: none;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    border: none;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .card-header {
-  background-color: #fff;
-  border-bottom: none;
+    background-color: #fff;
+    border-bottom: none;
 }
 
 .card-body {
-  background-color: #f8f9fa;
+    background-color: #f8f9fa;
 }
 
 .form-group {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .form-group label {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .btn-login {
-  background-color: #007bff;
-  color: #fff;
-  font-weight: bold;
+    background-color: #007bff;
+    color: #fff;
+    font-weight: bold;
+}
+
+.sticky-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Esempio di altezza per l'header */
+    z-index: 999;
+}
+
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+footer{
+    margin-top: auto;
+    background: #274c77;
+}
+footer .text-muted {
+    color: white !important;
+    text-decoration: none;
+}
+.sticky-header{
+    background: #274c77;
+
+}
+.sticky-header a{
+    color: white !important;;
+    text-decoration: none; /* no underline */
+    transition: .5s;
+}
+.sticky-header .nav-link:hover{
+    color: #999AC6 !important;
+    transition: .5s;
 }
