--- a/templates/index.html
+++ b/templates/index.html
@@ -3,38 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>Dynamic Calendar JavaScript | CodingNepal</title>
-    <link rel="stylesheet" href="/static/calendar_style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Font Link for Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <script src="/static/script.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
+
+    <script src="/static/script.js" defer></script>
+    <link rel="stylesheet" href="/static/calendar_style.css">
+
   </head>
 
   <body>
-    <div class="wrapper">
-      <header>
-        <p class="current-date"></p>
-        <div class="icons">
-          <span id="prev" class="material-symbols-rounded">chevron_left</span>
-          <span id="next" class="material-symbols-rounded">chevron_right</span>
+    {% include './fragments/header.html' %}
+    <div class="parent-wrapper">
+      <div class="wrapper">
+        <header>
+          <p class="current-date"></p>
+          <div class="icons">
+            <span id="prev" class="material-symbols-rounded">chevron_left</span>
+            <span id="next" class="material-symbols-rounded">chevron_right</span>
+          </div>
+        </header>
+        <div class="calendar">
+          <ul class="weeks">
+            <li class="day-of-week">Sun</li>
+            <li class="day-of-week">Mon</li>
+            <li class="day-of-week">Tue</li>
+            <li class="day-of-week">Wed</li>
+            <li class="day-of-week">Thu</li>
+            <li class="day-of-week">Fri</li>
+            <li class="day-of-week">Sat</li>
+          </ul>
+          <ul class="days"></ul>
         </div>
-      </header>
-      <div class="calendar">
-        <ul class="weeks">
-          <li class="day-of-week">Sun</li>
-          <li class="day-of-week">Mon</li>
-          <li class="day-of-week">Tue</li>
-          <li class="day-of-week">Wed</li>
-          <li class="day-of-week">Thu</li>
-          <li class="day-of-week">Fri</li>
-          <li class="day-of-week">Sat</li>
-        </ul>
-        <ul class="days"></ul>
       </div>
     </div>
 
+  {% include './fragments/footer.html' %}
   </body>
 
 
