--- a/static/style.css
+++ b/static/style.css
@@ -100,3 +100,100 @@ footer .text-muted {
     color: #999AC6 !important;
     transition: .5s;
 }
+
+  .search-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 300px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 5px;
+    overflow: hidden;
+    height: 35px;
+    margin-right: 10px;
+      margin-bottom: 0;
+  }
+
+  .search-form input[type="text"] {
+    flex-grow: 1;
+    border: none;
+    padding: 8px;
+    border-radius: 20px;
+    outline: none;
+    font-size: 14px;
+  }
+
+  .search-form button[type="submit"] {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 8px;
+  }
+
+  .search-form button[type="submit"] i {
+    color: #777;
+  }
+.tri-state-toggle {
+    background: white;
+    box-shadow: inset 0 2px 8px 0 rgba(165,170,174,0.25);
+    border-radius: 24px;
+    display: inline-block;
+    overflow: hidden;
+    display: inline-flex;
+    flex-direction: row;
+    width: 125px;
+  transition: all 500ms ease;
+    margin-right: 30px;
+}
+
+.tri-state-toggle-button {
+    border-radius: 22px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 98px;
+    background-color: transparent;
+    border: 0px solid transparent;
+    margin: 2px;
+    color: white;
+    cursor: pointer;
+    color: black;
+
+/*    -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition:    all 0.5s ease-in-out;
+  -ms-transition:     all 0.5s ease-in-out;
+  -o-transition:      all 0.5s ease-in-out; */
+}
+
+.tri-state-toggle-button.active {
+    background-image: linear-gradient(
+                            90deg,
+                            #77ba99 0%,
+                            rgba(83, 157, 121, 0.66) 35%,
+                            rgb(90, 246, 169) 100%
+                          );
+
+    border: 0px solid rgba(207,207,207,0.6);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1);
+    color: white;
+    font-weight: 500;
+}
+
+.tri-state-toggle-button:focus {
+  outline: none;
+}
+  .tri-state-toggle-button i {
+    transition: all 0.3s;
+  }
+    .tri-state-toggle-slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #007bff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    transition: left 0.3s;
+  }
